; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_add_listener.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_add_listener.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coreaudio_data = type { i32 }
%struct.TYPE_3__ = type { i32, i32, i32 }

@kAudioObjectPropertyScopeGlobal = common dso_local global i32 0, align 4
@kAudioObjectPropertyElementMaster = common dso_local global i32 0, align 4
@notification_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.coreaudio_data*, i32)* @add_listener to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_listener(%struct.coreaudio_data* %0, i32 %1) #0 {
  %3 = alloca %struct.coreaudio_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  store %struct.coreaudio_data* %0, %struct.coreaudio_data** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* %6, align 4
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %9 = load i32, i32* @kAudioObjectPropertyScopeGlobal, align 4
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %11 = load i32, i32* @kAudioObjectPropertyElementMaster, align 4
  store i32 %11, i32* %10, align 4
  %12 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %13 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @notification_callback, align 4
  %16 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %17 = call i32 @AudioObjectAddPropertyListener(i32 %14, %struct.TYPE_3__* %5, i32 %15, %struct.coreaudio_data* %16)
  ret i32 %17
}

declare dso_local i32 @AudioObjectAddPropertyListener(i32, %struct.TYPE_3__*, i32, %struct.coreaudio_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
